tests/baselines/reference/verbatimModuleSyntaxCompat4.errors.txt
/tsconfig.json(5,9): error TS5101: Option 'preserveValueImports' is deprecated and will stop functioning in TypeScript 5.5. Specify compilerOption '"ignoreDeprecations": "5.0"' to silence this error.
  Use 'verbatimModuleSyntax' instead.
/tsconfig.json(6,9): error TS5101: Option 'importsNotUsedAsValues' is deprecated and will stop functioning in TypeScript 5.5. Specify compilerOption '"ignoreDeprecations": "5.0"' to silence this error.
  Use 'verbatimModuleSyntax' instead.


==== /tsconfig.json (2 errors) ====
    {
        "extends": "./tsconfig.base.json",
        "compilerOptions": {
            "isolatedModules": true,
            "preserveValueImports": true,
            ~~~~~~~~~~~~~~~~~~~~~~
!!! error TS5101: Option 'preserveValueImports' is deprecated and will stop functioning in TypeScript 5.5. Specify compilerOption '"ignoreDeprecations": "5.0"' to silence this error.
!!! error TS5101:   Use 'verbatimModuleSyntax' instead.
            "importsNotUsedAsValues": "error",
            ~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS5101: Option 'importsNotUsedAsValues' is deprecated and will stop functioning in TypeScript 5.5. Specify compilerOption '"ignoreDeprecations": "5.0"' to silence this error.
!!! error TS5101:   Use 'verbatimModuleSyntax' instead.
        }
    }
==== /index.ts (0 errors) ====
    
==== /tsconfig.base.json (0 errors) ====
    {
        "compilerOptions": {
            "verbatimModuleSyntax": true
        }
    }